Created a default toggle button used in shop and combat encounter for selecting a category Created factory method for Inventory objects fixed PopupWindow leaking when closing BuyInformationActivity by dismissing it fixed starting gold being 0 from not creating new character properly created new default button removed ability_item_list_details to use inventory_snippet  - weapon_list_details now uses inventory_snippet layout inside its xml added str and int scaling attributes for abilities in database and Ability class fixed look for inventory snippet moved stat observers to CharacterEntity from CharacterEntityViewModel changed character and game button at top of MainGameActivity to be default buttons fixed Inventory actions recyclerView in combatFragment from continually increasing in size

--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -75,6 +75,7 @@
                     android:layout_width="@dimen/combat_character_action_icon_size"
                     android:layout_height="@dimen/combat_character_action_icon_size"
                     android:layout_gravity="center"
+                    android:elevation="@dimen/action_icon_elevation"
                     app:imageResource="@{characterVM.drawableResID}"/>
 
                 <LinearLayout
@@ -87,25 +88,19 @@
 
                     <Button
                         android:id="@+id/rv_category_weapons"
-                        style="@style/DefaultButton"
-                        android:layout_width="@dimen/default_btn_width"
-                        android:layout_height="@dimen/default_btn_height"
+                        style="@style/DefaultToggleButton"
                         android:text="@string/category_weapons_option"
                         android:textSize="@dimen/txt_size_medium" />
 
                     <Button
                         android:id="@+id/rv_category_abilities"
-                        style="@style/DefaultButton"
-                        android:layout_width="@dimen/default_btn_width"
-                        android:layout_height="@dimen/default_btn_height"
+                        style="@style/DefaultToggleButton"
                         android:text="@string/category_abilities_option"
                         android:textSize="@dimen/txt_size_medium" />
 
                     <Button
                         android:id="@+id/rv_category_items"
-                        style="@style/DefaultButton"
-                        android:layout_width="@dimen/default_btn_width"
-                        android:layout_height="@dimen/default_btn_height"
+                        style="@style/DefaultToggleButton"
                         android:text="@string/category_items_option"
                         android:textSize="@dimen/txt_size_medium" />
 
@@ -120,22 +115,21 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_weapons"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:visibility="visible" />
+                        android:layout_height="wrap_content" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_abilities"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:visibility="invisible"/>
+                        android:visibility="invisible" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_items"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:visibility="invisible"/>
+                        android:visibility="invisible" />
 
                 </RelativeLayout>
 
@@ -150,6 +144,7 @@
                         android:layout_width="@dimen/default_btn_width"
                         android:layout_height="@dimen/default_btn_height"
                         android:visibility="gone"
+                        android:layout_marginTop="5dp"
                         android:textSize="@dimen/txt_size_medium"
                         android:text="@string/btn_run">
                     </Button>
