--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -60,7 +60,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="50dp"
-            android:background="@drawable/top_button"
+            android:background="@drawable/default_button"
             android:onClick="@{()-> mainGameViewModel.gotoCharacterFragment()}"
             android:text="Character"
             android:textSize="@dimen/txt_size_medium"
@@ -73,7 +73,7 @@
             android:layout_height="40dp"
             android:layout_marginEnd="60dp"
             android:onClick="@{()-> mainGameViewModel.gotoGameFragment()}"
-            android:background="@drawable/top_button"
+            android:background="@drawable/default_button"
             android:text="GAME"
             android:textSize="@dimen/txt_size_medium"
             app:layout_constraintEnd_toEndOf="parent"
