--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -46,8 +46,7 @@
 
                 <Button
                     android:id="@+id/btn_sell"
-                    android:layout_width="@dimen/default_btn_width"
-                    android:layout_height="@dimen/default_btn_height"
+                    style="@style/DefaultToggleButton"
                     android:layout_marginTop="44dp"
                     android:layout_marginEnd="80dp"
                     android:text="@string/sell"
@@ -56,8 +55,7 @@
 
                 <Button
                     android:id="@+id/btn_buy"
-                    android:layout_width="@dimen/default_btn_width"
-                    android:layout_height="@dimen/default_btn_height"
+                    style="@style/DefaultToggleButton"
                     android:layout_marginStart="80dp"
                     android:layout_marginTop="44dp"
                     android:text="@string/buy"
