--- a/app/src/main/res/layout/inventory_snippet.xml
+++ b/app/src/main/res/layout/inventory_snippet.xml
@@ -10,23 +10,23 @@
             type="String" />
     </data>
     <RelativeLayout
-        android:id="@+id/attack_container"
+        android:id="@+id/attack_snippet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/action_back"
-        android:padding="3dp"
+        android:padding="5dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_icon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/inventory_snippet_text_height"
+            android:layout_height="@dimen/inventory_snippet_text_height"
             app:imageResource="@{inventoryPic}" />
 
         <TextView
             android:id="@+id/txt_name"
-            android:layout_width="200dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/inventory_snippet_text_width"
+            android:layout_height="@dimen/inventory_snippet_text_height"
             android:layout_marginStart="10dp"
             android:layout_toEndOf="@+id/img_icon"
             android:layout_gravity="center"
