--- a/app/src/main/res/layout/weapon_list_details.xml
+++ b/app/src/main/res/layout/weapon_list_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
@@ -9,26 +9,12 @@
         <variable
             name="weaponName"
             type="String" />
-
-        <variable
-            name="attackIconResource"
-            type="Integer" />
-        <variable
-            name="attackName"
-            type="String" />
-
-        <variable
-            name="sAttackIconResource"
-            type="Integer" />
-        <variable
-            name="sAttackName"
-            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/weapon_container"
@@ -53,82 +39,47 @@
                 android:layout_height="35dp"
                 android:layout_marginStart="10dp"
                 android:gravity="center_vertical"
+                android:layout_marginEnd="4dp"
                 android:text="@{weaponName}" />
 
         </LinearLayout>
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/attack_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/weapon_container"
             android:layout_marginStart="20sp"
             android:layout_marginTop="@dimen/action_margin_top"
-            android:background="@drawable/action_back"
-            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="@+id/weapon_container"
             app:layout_constraintTop_toBottomOf="@+id/weapon_container">
 
-            <ImageView
-                android:id="@+id/img_icon"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                app:imageResource="@{attackIconResource}" />
-
-            <TextView
-                android:id="@+id/txt_name"
+            <include
+                android:id="@+id/attack_snippet"
+                layout="@layout/inventory_snippet"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
-                android:text="@{attackName}" />
+                android:layout_height="wrap_content" />
 
-            <ImageView
-                android:id="@+id/inventory_info"
-                android:layout_width="@dimen/inventory_info_icon_size"
-                android:layout_height="@dimen/inventory_info_icon_size"
-                android:layout_gravity="center"
-                android:layout_marginStart="@dimen/inventory_info_icon_margins"
-                android:layout_marginEnd="@dimen/inventory_info_icon_margins"
-                app:srcCompat="@drawable/inventory_info" />
+        </FrameLayout>
 
-        </LinearLayout>
 
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/s_attack_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/attack_container"
-            android:layout_marginTop="@dimen/action_margin_top"
-            android:background="@drawable/action_back"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="@+id/attack_container"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="7dp"
+            app:layout_constraintStart_toStartOf="@+id/weapon_container"
             app:layout_constraintTop_toBottomOf="@+id/attack_container">
 
-            <ImageView
-                android:id="@+id/img_icon_s_attack"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                app:imageResource="@{sAttackIconResource}" />
-
-            <TextView
-                android:id="@+id/txt_name_s_attack"
+            <include
+                android:id="@+id/s_attack_snippet"
+                layout="@layout/inventory_snippet"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
-                android:text="@{sAttackName}" />
+                android:layout_height="wrap_content" />
 
-            <ImageView
-                android:id="@+id/inventory_info_s_attack"
-                android:layout_width="@dimen/inventory_info_icon_size"
-                android:layout_height="@dimen/inventory_info_icon_size"
-                android:layout_gravity="center"
-                android:layout_marginStart="@dimen/inventory_info_icon_margins"
-                android:layout_marginEnd="@dimen/inventory_info_icon_margins"
-                app:srcCompat="@drawable/inventory_info" />
+        </FrameLayout>
 
-        </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
