--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,14 +31,19 @@
     <dimen name="inventory_info_icon_size">20dp</dimen>
     <dimen name="inventory_info_icon_margins">7sp</dimen>
 
-    <dimen name="default_btn_height">42dp</dimen>
-    <dimen name="default_btn_width">100dp</dimen>
+    <dimen name="default_btn_height">50dp</dimen>
+    <dimen name="default_btn_width">125dp</dimen>
 
     <dimen name="character_frag_title">20dp</dimen>
     <dimen name="inventory_image_size">50dp</dimen>
 
     <dimen name="margin_side_inside_scroll">20dp</dimen>
 
+    <dimen name="action_icon_elevation">5dp</dimen>
+
     <dimen name="inventory_info_button_side_margin">24dp</dimen>
     <dimen name="inventory_info_button_top_margin">6dp</dimen>
+
+    <dimen name="inventory_snippet_text_width">150dp</dimen>
+    <dimen name="inventory_snippet_text_height">35dp</dimen>
 </resources>
