--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,15 +7,23 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#000000</item>
         <item name="buttonStyle">@style/DefaultButton</item>
-
         <item name="android:windowContentTransitions">true</item>
-
     </style>
 
     <style name="DefaultButton" parent="android:style/Widget.Button">
         <item name="android:background">@drawable/custom_default_button</item>
         <item name="android:layout_width">@dimen/default_btn_width</item>
         <item name="android:layout_height">@dimen/default_btn_height</item>
+        <item name="paddingEnd">10dp</item>
+        <item name="paddingStart">10dp</item>
+    </style>
+
+    <style name="DefaultToggleButton" parent="android:style/Widget.Button">
+        <item name="android:background">@drawable/custom_default_toggle_button</item>
+        <item name="android:layout_width">@dimen/default_btn_width</item>
+        <item name="android:layout_height">@dimen/default_btn_height</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
     </style>
 
     <style name="DungeonPopupAnimation">
