UI  - Added a unique default category button style, renamed from default toggle button  - changed buttons for swapping between character and game fragment to default category buttons    - swapped onClick to go to MainGameActivity first  - updated health_mana_bar drawable  - created an enemy_action_select layout for the selectable enemy icons in combat fragment    - current and max health of enemies displayed under their names  - current and max health of player character now show on MainGameActivity  - fixed getHealth and getMana in CharacterViewModel to return an integer    - added binding adapter to display a string value from a current and max value, for things like health fixed some comments CombatViewModel uses CharacterEntityViewModel instead of CharacterEntity for abstraction  - enemies now go through CharacterViewModel to have attacks applied to them instead of through Enemy model fixed current health healing past max removed possibility of getting special effect debuff from a trap, and throws exception if tried to  - removed specials from encounter JSON files fixed combat encounter not setting enemy ID correctly fixed enemies from not saving weapon added getIsSaved to MainGameViewModel, called by EncounterViewModel

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,10 +18,10 @@
         <item name="paddingStart">10dp</item>
     </style>
 
-    <style name="DefaultToggleButton" parent="android:style/Widget.Button">
-        <item name="android:background">@drawable/custom_default_toggle_button</item>
-        <item name="android:layout_width">@dimen/default_btn_width</item>
-        <item name="android:layout_height">@dimen/default_btn_height</item>
+    <style name="DefaultCategoryButton" parent="android:style/Widget.Button">
+        <item name="android:background">@drawable/custom_default_category_button</item>
+        <item name="android:layout_width">@dimen/default_category_btn_width</item>
+        <item name="android:layout_height">@dimen/default_category_btn_height</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
     </style>
