--- a/app/src/main/res/layout/activity_main_game.xml
+++ b/app/src/main/res/layout/activity_main_game.xml
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/txt_distance"
-            value="@{characterViewModel.distance}"
+            val="@{characterViewModel.distance}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -60,8 +60,8 @@
             android:layout_height="40dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="50dp"
-            android:background="@drawable/default_button"
-            android:onClick="@{()-> mainGameViewModel.gotoCharacterFragment()}"
+            style="@style/DefaultCategoryButton"
+            android:onClick="characterButtonClick"
             android:text="Character"
             android:textSize="@dimen/txt_size_medium"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +72,8 @@
             android:layout_width="120dp"
             android:layout_height="40dp"
             android:layout_marginEnd="60dp"
-            android:onClick="@{()-> mainGameViewModel.gotoGameFragment()}"
-            android:background="@drawable/default_button"
+            android:onClick="gameButtonClick"
+            style="@style/DefaultCategoryButton"
             android:text="GAME"
             android:textSize="@dimen/txt_size_medium"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,8 @@
             android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{characterViewModel.health}"
+            app:current="@{characterViewModel.health}"
+            app:max="@{characterViewModel.maxHealth}"
             android:textColor="#000000"
             android:textSize="@dimen/txt_size_medium"
             app:layout_constraintBottom_toBottomOf="@+id/health_mana_image"
@@ -109,7 +110,8 @@
             android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@{characterViewModel.mana}"
+            app:current="@{characterViewModel.mana}"
+            app:max="@{characterViewModel.maxHealth}"
             android:textColor="#000000"
             android:textSize="@dimen/txt_size_medium"
             app:layout_constraintBottom_toBottomOf="@+id/health_mana_image"
