--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,8 @@
     <dimen name="btn_consume_height">35dp</dimen>
     <dimen name="btn_consume_width">40dp</dimen>
 
-    <dimen name="mana_health_bar_height">35dp</dimen>
-    <dimen name="mana_health_bar_width">110dp</dimen>
+    <dimen name="mana_health_bar_height">32dp</dimen>
+    <dimen name="mana_health_bar_width">120dp</dimen>
 
     <dimen name="txt_size_small">8sp</dimen>
     <dimen name="txt_size_medium">10sp</dimen>
@@ -33,6 +33,8 @@
 
     <dimen name="default_btn_height">50dp</dimen>
     <dimen name="default_btn_width">125dp</dimen>
+    <dimen name="default_category_btn_height">50dp</dimen>
+    <dimen name="default_category_btn_width">110dp</dimen>
 
     <dimen name="character_frag_title">20dp</dimen>
     <dimen name="inventory_image_size">50dp</dimen>
