Random benefit encounter  - Now can take a tier, number of rewards, and booleans for exp and gold rewards    - tier, exp and gold rewards only specified when making custom random benefit encounter.  - made InventoryToRetrieve a Stack    - added method in EncounterViewModel to pull a saved Stack of Inventory rewards from JSON    - EncounterViewModel now uses InventoryFactory to turn the JSON String into Inventory objects  - created builder for RandomBenefitModel to create customized random benefit encounter  - added numRewards object inside JSON String asset file for encounters made methods in MainGameModel static InventoryInfoActivity  - created CreateInventoryActivity with static method to create the activity    - made any call to InventoryInfoActivity go through CreateInventoryActivity

--- a/app/src/main/res/layout/inventory_snippet.xml
+++ b/app/src/main/res/layout/inventory_snippet.xml
@@ -10,7 +10,7 @@
             type="String" />
     </data>
     <RelativeLayout
-        android:id="@+id/attack_snippet"
+        android:id="@+id/inventory_snippet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/action_back"
