--- a/app/src/main/res/layout/fragment_random_benefit.xml
+++ b/app/src/main/res/layout/fragment_random_benefit.xml
@@ -39,7 +39,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="25dp"
+                android:visibility="gone">
+
+                <include
+                    android:id="@+id/snippet_binding"
+                    layout="@layout/inventory_snippet" />
             </FrameLayout>
         </LinearLayout>
 
