--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="fragment_animation_duration">600</integer>
+
+    <integer name="Wizard_Start_Ability">3</integer>
+    <integer name="Warrior_Start_Ability">4</integer>
+    <integer name="Paladin_Start_Ability">6</integer>
+    <integer name="Archer_Start_Ability">5</integer>
+
+    <integer name="Wizard_Start_Weapon">1</integer>
+    <integer name="Warrior_Start_Weapon">1</integer>
+    <integer name="Paladin_Start_Weapon">1</integer>
+    <integer name="Archer_Start_Weapon">1</integer>
+
+    <integer name="Wizard_Start_Item">1</integer>
+    <integer name="Warrior_Start_Item">1</integer>
+    <integer name="Paladin_Start_Item">1</integer>
+    <integer name="Archer_Start_Item">1</integer>
+
 </resources>
