changed layout_button_options inside encounter's xml to LinearLayout moved applyBeforeEncounter to gotoBeginningState in EncounterViewModel  - can check for a saved game so it doesn't repeat on returning to saved set savedEncounter to null in MainGameViewModel before creating a new encounter InventoryEntity interface  - split Inventory interface into Inventory and InventoryEntity    - Inventory encompasses actual Inventory objects with a tier    - InventoryEntity encompasses everything to do with Inventory (Inventory objects and its action dependencies) implemented ShopKeeperLoot  - gets a tier to scale to loot to, and builds GridModels by taking Inventory objects from the database and converting  - holds all logic to do with the cost, type of loot, and number of loot to buy

--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/inventory"
+                    android:id="@+id/inventoryEntity"
                     android:layout_width="111dp"
                     android:layout_height="31dp"
                     android:layout_marginStart="@dimen/character_frag_title"
@@ -45,7 +45,7 @@
                     android:layout_marginEnd="@dimen/character_frag_title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/inventory" />
+                    app:layout_constraintTop_toBottomOf="@+id/inventoryEntity" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
