--- a/app/src/main/res/layout/fragment_check.xml
+++ b/app/src/main/res/layout/fragment_check.xml
@@ -14,13 +14,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <GridLayout
+            <LinearLayout
                 android:id="@+id/layout_btn_options"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:rowCount="2"
-                android:columnCount="2">
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/btn_continue"
@@ -36,7 +36,7 @@
                     android:text="leave"
                     android:visibility="gone"/>
 
-            </GridLayout>
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_dialogue"
