--- a/app/src/main/res/layout/fragment_choice_benefit.xml
+++ b/app/src/main/res/layout/fragment_choice_benefit.xml
@@ -20,14 +20,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <GridLayout
+            <LinearLayout
                 android:id="@+id/layout_btn_options"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:rowCount="2"
-                android:columnCount="3">
-            </GridLayout>
+                android:gravity="center">
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_dialogue"
