--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -162,15 +162,14 @@
 
             </LinearLayout>
 
-            <GridLayout
-                android:id="@+id/layout_btn_options"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:rowCount="2"
-                android:columnCount="3">
-
-            </GridLayout>
+            <LinearLayout
+            android:id="@+id/layout_btn_options"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center">
+            </LinearLayout>
 
 
             <androidx.recyclerview.widget.RecyclerView
