--- a/app/src/main/res/layout/fragment_combat_dungeon.xml
+++ b/app/src/main/res/layout/fragment_combat_dungeon.xml
@@ -26,13 +26,13 @@
                 android:layout_gravity="center"
                 android:orientation="horizontal">
 
-                <GridLayout
+                <LinearLayout
                     android:id="@+id/layout_btn_options"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:rowCount="2"
-                    android:columnCount="3">
+                    android:orientation="horizontal"
+                    android:layout_gravity="center"
+                    android:gravity="center">
 
                     <Button
                         android:id="@+id/btn_enter"
@@ -48,7 +48,7 @@
                         android:text="leave"
                         android:visibility="gone"/>
 
-                </GridLayout>
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/btn_info"
