--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_continue_game"
             android:visibility="@{viewModel.existingGameVisibility}"
-            android:onClick="@{()-> viewModel.deleteCharacter(context)}"/>
+            android:onClick="@{()-> viewModel.deleteCharacter()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
