--- a/app/src/main/res/layout/character_ability_list_details.xml
+++ b/app/src/main/res/layout/character_ability_list_details.xml
@@ -6,23 +6,25 @@
             type="com.habbybolan.textadventure.model.inventory.Ability" />
     </data>
     <RelativeLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/ability_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/press_start_2p"/>
+        <ImageButton
+            android:id="@+id/info_ability"
+            android:layout_width="@dimen/inventory_info_icon_size"
+            android:layout_height="@dimen/inventory_info_icon_size"
+            android:background="@drawable/inventory_info"
+            android:layout_marginStart="@dimen/character_inventory_list_margin_start"
+            android:layout_marginTop="@dimen/character_inventory_list_margin_top"/>
 
         <TextView
             android:id="@+id/ability_detail"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
-            android:layout_below="@+id/ability_label"
-            android:text="@{ability.name}"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="11dp"/>
+            android:layout_marginStart="@dimen/character_inventory_list_margin_start"
+            android:layout_marginTop="@dimen/character_inventory_list_margin_top"
+            android:layout_toEndOf="@+id/info_ability"
+            android:text="@{ability.name}" />
 
         <Button
             android:id="@+id/btn_drop_ability"
