--- a/app/src/main/res/layout/character_item_list_details.xml
+++ b/app/src/main/res/layout/character_item_list_details.xml
@@ -9,22 +9,26 @@
             type="android.view.View" />
     </data>
     <RelativeLayout
-        android:layout_width="match_parent" android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/item_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/info_item"
+            android:layout_width="@dimen/inventory_info_icon_size"
+            android:layout_height="@dimen/inventory_info_icon_size"
+            android:background="@drawable/inventory_info"
+            android:layout_marginStart="@dimen/character_inventory_list_margin_start"
+            android:layout_marginTop="@dimen/character_inventory_list_margin_top"/>
+
 
         <TextView
             android:id="@+id/item_detail"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
-            android:layout_below="@+id/item_label"
+            android:layout_toEndOf="@+id/info_item"
             android:text="@{item.name}"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="11dp" />
+            android:layout_marginStart="@dimen/character_inventory_list_margin_start"
+            android:layout_marginTop="@dimen/character_inventory_list_margin_top"/>
 
         <Button
             android:id="@+id/btn_drop_item"
