--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,9 +32,12 @@
     <dimen name="inventory_info_icon_margins">7sp</dimen>
 
     <dimen name="default_btn_height">50dp</dimen>
-    <dimen name="default_btn_width">115dp</dimen>
+    <dimen name="default_btn_width">120dp</dimen>
     <dimen name="default_category_btn_height">50dp</dimen>
     <dimen name="default_category_btn_width">110dp</dimen>
+
+    <dimen name="character_inventory_list_margin_start">15dp</dimen>
+    <dimen name="character_inventory_list_margin_top">11dp</dimen>
 
     <dimen name="character_frag_title">20dp</dimen>
     <dimen name="inventory_image_size">50dp</dimen>
