--- a/app/src/main/res/layout/fragment_combat_dungeon.xml
+++ b/app/src/main/res/layout/fragment_combat_dungeon.xml
@@ -23,16 +23,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
+                android:layout_gravity="center">
 
                 <LinearLayout
                     android:id="@+id/layout_btn_options"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:gravity="center">
+                    android:layout_centerHorizontal="true">
 
                     <Button
                         android:id="@+id/btn_enter"
@@ -58,8 +56,7 @@
                     android:layout_marginTop="2dp"
                     android:layout_marginEnd="@dimen/margin_side_inside_scroll"
                     android:background="@drawable/info"
-                    android:gravity="start"
-                    android:visibility="gone"/>
+                    android:gravity="start" />
 
             </RelativeLayout>
 
